tests/paczka1/fuzzy1/84657131.err
Error in line 2: WubClIro A601 51,9
Error in line 6: g0u8 A601 79,6
Error in line 11: g0u8 A642 84,9
Error in line 28: ySF1XAwW A433 86,4
